--- a/A2/Output/SAA_IS_results.tex
+++ b/A2/Output/SAA_IS_results.tex
@@ -1,11 +1,11 @@
-\begin{tabular}{lrrr}
+\begin{tabular}{lrrrr}
 \toprule
-{} &       ERC &        SR &       MDP \\
+{} &  Benchmark IS &       ERC &        SR &       MDP \\
 \midrule
-Mean        &  0.057761 &  0.058972 &  0.050150 \\
-Volatility  &  0.041931 &  0.028272 &  0.032743 \\
-SharpeRatio &  1.377531 &  2.085923 &  1.531622 \\
-MaxDrawdown & -0.119611 & -0.041801 & -0.076081 \\
-HitRatio    &  0.731707 &  0.756098 &  0.723577 \\
+Mean        &      0.024888 &  0.057761 &  0.058972 &  0.050150 \\
+Volatility  &      0.083199 &  0.041931 &  0.028272 &  0.032743 \\
+SharpeRatio &      0.299132 &  1.377531 &  2.085923 &  1.531622 \\
+MaxDrawdown &     -0.310457 & -0.119611 & -0.041801 & -0.076081 \\
+HitRatio    &      0.585366 &  0.731707 &  0.756098 &  0.723577 \\
 \bottomrule
 \end{tabular}
