--- a/A2/Output/TAA_OS.tex
+++ b/A2/Output/TAA_OS.tex
@@ -1,11 +1,11 @@
-\begin{tabular}{lrrr}
+\begin{tabular}{lrrrrr}
 \toprule
-{} &     Value &  Momentum &  TAA\_OS\_VIX \\
+{} &  Benchmark OS &     Value &  Momentum &  TAA\_OS\_VIX &  TAA\_OS\_Parametrics \\
 \midrule
-Mean        &  0.032395 &  0.040079 &    0.040773 \\
-Volatility  &  0.069002 &  0.069002 &    0.054509 \\
-SharpeRatio &  0.469478 &  0.580839 &    0.748006 \\
-MaxDrawdown & -0.203167 & -0.171924 &   -0.067063 \\
-HitRatio    &  0.540323 &  0.532258 &    0.556452 \\
+Mean        &      0.058004 &  0.023931 &  0.035894 &    0.033128 &            0.029380 \\
+Volatility  &      0.067447 &  0.050973 &  0.061797 &    0.045109 &            0.037870 \\
+SharpeRatio &      0.859999 &  0.469478 &  0.580839 &    0.734396 &            0.775815 \\
+MaxDrawdown &     -0.108245 & -0.153731 & -0.155123 &   -0.053907 &           -0.053907 \\
+HitRatio    &      0.685484 &  0.540323 &  0.532258 &    0.556452 &            0.572581 \\
 \bottomrule
 \end{tabular}
