--- a/A2/Output/ValMom_IS_results.tex
+++ b/A2/Output/ValMom_IS_results.tex
@@ -1,11 +1,11 @@
-\begin{tabular}{lrr}
+\begin{tabular}{lrrr}
 \toprule
-{} &     Value &  Momentum \\
+{} &  Benchmark IS &     Value &  Momentum \\
 \midrule
-Mean        &  0.065875 &  0.048307 \\
-Volatility  &  0.069000 &  0.069000 \\
-SharpeRatio &  0.954719 &  0.700108 \\
-MaxDrawdown & -0.094119 & -0.096352 \\
-HitRatio    &  0.617886 &  0.626016 \\
+Mean        &      0.024888 &  0.065875 &  0.048307 \\
+Volatility  &      0.083199 &  0.069000 &  0.069000 \\
+SharpeRatio &      0.299132 &  0.954719 &  0.700108 \\
+MaxDrawdown &     -0.310457 & -0.094119 & -0.096352 \\
+HitRatio    &      0.585366 &  0.617886 &  0.626016 \\
 \bottomrule
 \end{tabular}
