--- a/A2/Output/ValMom_OS_results.tex
+++ b/A2/Output/ValMom_OS_results.tex
@@ -1,11 +1,11 @@
-\begin{tabular}{lrr}
+\begin{tabular}{lrrr}
 \toprule
-{} &     Value &  Momentum \\
+{} &  Benchmark OS &     Value &  Momentum \\
 \midrule
-Mean        &  0.032395 &  0.040079 \\
-Volatility  &  0.069002 &  0.069002 \\
-SharpeRatio &  0.469478 &  0.580839 \\
-MaxDrawdown & -0.203167 & -0.171924 \\
-HitRatio    &  0.540323 &  0.532258 \\
+Mean        &      0.058004 &  0.023931 &  0.035894 \\
+Volatility  &      0.067447 &  0.050973 &  0.061797 \\
+SharpeRatio &      0.859999 &  0.469478 &  0.580839 \\
+MaxDrawdown &     -0.108245 & -0.153731 & -0.155123 \\
+HitRatio    &      0.685484 &  0.540323 &  0.532258 \\
 \bottomrule
 \end{tabular}
