--- a/A2/Output/SAA_OS_results.tex
+++ b/A2/Output/SAA_OS_results.tex
@@ -1,11 +1,11 @@
-\begin{tabular}{lrrr}
+\begin{tabular}{lrrrr}
 \toprule
-{} &       ERC &        SR &       MDP \\
+{} &  Benchmark OS &       ERC &        SR &       MDP \\
 \midrule
-Mean        &  0.032523 &  0.036677 &  0.032016 \\
-Volatility  &  0.037449 &  0.027977 &  0.030001 \\
-SharpeRatio &  0.868476 &  1.310970 &  1.067154 \\
-MaxDrawdown & -0.052549 & -0.033378 & -0.036982 \\
-HitRatio    &  0.612903 &  0.645161 &  0.637097 \\
+Mean        &      0.058004 &  0.032523 &  0.036677 &  0.032016 \\
+Volatility  &      0.067447 &  0.037449 &  0.027977 &  0.030001 \\
+SharpeRatio &      0.859999 &  0.868476 &  1.310970 &  1.067154 \\
+MaxDrawdown &     -0.108245 & -0.052549 & -0.033378 & -0.036982 \\
+HitRatio    &      0.685484 &  0.612903 &  0.645161 &  0.637097 \\
 \bottomrule
 \end{tabular}
