--- a/A2/Output/TAA_IS.tex
+++ b/A2/Output/TAA_IS.tex
@@ -1,11 +1,11 @@
-\begin{tabular}{lrrr}
+\begin{tabular}{lrrrrr}
 \toprule
-{} &     Value &  Momentum &  TAA\_IS\_VIX \\
+{} &  Benchmark IS &     Value &  Momentum &  TAA\_IS\_VIX &  TAA\_IS\_Parametrics \\
 \midrule
-Mean        &  0.065875 &  0.048307 &    0.070672 \\
-Volatility  &  0.069000 &  0.069000 &    0.073322 \\
-SharpeRatio &  0.954719 &  0.700108 &    0.963859 \\
-MaxDrawdown & -0.094119 & -0.096352 &   -0.068739 \\
-HitRatio    &  0.617886 &  0.626016 &    0.626016 \\
+Mean        &      0.024888 &  0.065875 &  0.048307 &    0.071942 &            0.057873 \\
+Volatility  &      0.083199 &  0.069000 &  0.069000 &    0.073493 &            0.057539 \\
+SharpeRatio &      0.299132 &  0.954719 &  0.700108 &    0.978891 &            1.005798 \\
+MaxDrawdown &     -0.310457 & -0.094119 & -0.096352 &   -0.068739 &           -0.062549 \\
+HitRatio    &      0.585366 &  0.617886 &  0.626016 &    0.634146 &            0.617886 \\
 \bottomrule
 \end{tabular}
