--- a/A3/assignement3.ipynb
+++ b/A3/assignement3.ipynb
@@ -268,6 +268,13 @@
    "metadata": {}
   },
   {
+   "source": [
+    "### VaR"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 54,
    "metadata": {},
@@ -285,9 +292,35 @@
     "ptf_return_TAA_sort = ptf_return_TAA.sort_values(ascending=True)\n",
     "ptf_return_Real_sort = ptf_return_Real.sort_values(ascending=True)\n",
     "\n",
+    "\n",
     "print(f'VaR SAA 5%: {ptf_return_SAA_sort.quantile(0.05)}')\n",
     "print(f'VaR TAA 5%: {ptf_return_TAA_sort.quantile(0.05)}')\n",
     "print(f'VaR Real 5%: {ptf_return_Real_sort.quantile(0.05)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "ES SAA hist 5%: -0.03757842294207015\nES TAA hist 5%: -0.07091502938402984\nES Real hist 5%: -0.06817750539266482\n"
+     ]
+    }
+   ],
+   "source": [
+    "#https://s3.amazonaws.com/assets.datacamp.com/production/course_5612/slides/chapter4.pdf\n",
+    "\n",
+    "ES_SAA_hist = ptf_return_SAA_sort[ptf_return_SAA_sort <= np.quantile(ptf_return_SAA_sort,0.05)].mean()\n",
+    "ES_TAA_hist = ptf_return_TAA_sort[ptf_return_TAA_sort <= np.quantile(ptf_return_TAA_sort,0.05)].mean()\n",
+    "ES_Real_hist = ptf_return_Real_sort[ptf_return_Real_sort <= np.quantile(ptf_return_Real_sort,0.05)].mean()\n",
+    "\n",
+    "print(f'ES SAA hist 5%: {ES_SAA_hist}')\n",
+    "print(f'ES TAA hist 5%: {ES_TAA_hist}')\n",
+    "print(f'ES Real hist 5%: {ES_Real_hist}')"
    ]
   },
   {
