--- a/A3/assignement3.ipynb
+++ b/A3/assignement3.ipynb
@@ -211,15 +211,8 @@
    "metadata": {}
   },
   {
-   "source": [
-    "## VaR"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,6 +228,13 @@
     "mean_Real = np.mean(ptf_return_Real)\n",
     "std_Real = np.std(ptf_return_Real)"
    ]
+  },
+  {
+   "source": [
+    "## VaR"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -258,6 +258,36 @@
     "\n",
     "VaR_95_Real = norm.ppf(1-0.95,mean_Real,std_Real)\n",
     "print(f'VaR 95% Real: {VaR_95_Real}')"
+   ]
+  },
+  {
+   "source": [
+    "## ES"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "ES SAA var 5%: -0.04104471398345727\nES TAA var 5%: -0.08103724005998526\nES Real var 5%: -0.07471464156853269\n"
+     ]
+    }
+   ],
+   "source": [
+    "ES_var_SAA = ptf_return_SAA[ptf_return_SAA <= VaR_95_SAA].mean()\n",
+    "ES_var_TAA = ptf_return_TAA[ptf_return_TAA <= VaR_95_TAA].mean()\n",
+    "ES_var_Real = ptf_return_Real[ptf_return_Real <= VaR_95_Real].mean()\n",
+    "\n",
+    "print(f'ES SAA var 5%: {ES_var_SAA}')\n",
+    "print(f'ES TAA var 5%: {ES_var_TAA}')\n",
+    "print(f'ES Real var 5%: {ES_var_Real}')"
    ]
   },
   {
@@ -299,6 +329,13 @@
    ]
   },
   {
+   "source": [
+    "## ES"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 93,
    "metadata": {},
@@ -321,6 +358,103 @@
     "print(f'ES SAA hist 5%: {ES_SAA_hist}')\n",
     "print(f'ES TAA hist 5%: {ES_TAA_hist}')\n",
     "print(f'ES Real hist 5%: {ES_Real_hist}')"
+   ]
+  },
+  {
+   "source": [
+    "# Age weigthed simulation\n",
+    "\n",
+    "https://rstudio-pubs-static.s3.amazonaws.com/380973_abe685cfa68b4890a82e247c5e8e5869.html#/3"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## VaR"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lamb = 0.98\n",
+    "n = len(ptf_return_SAA)\n",
+    "age = [i+1 for i in range(n)]\n",
+    "age = np.sort(age)[::-1]\n",
+    "w = []\n",
+    "#print(age)\n",
+    "for i in range(n):\n",
+    "    temp = ((1-lamb)*(lamb**(age[i]-1)))/(1-lamb**n)\n",
+    "    w.append(temp)\n",
+    "\n",
+    "df_SAA = pd.DataFrame(ptf_return_SAA,columns=['return'])\n",
+    "df_SAA[\"w\"] = w\n",
+    "df_SAA = df_SAA.sort_values(by='return',ascending=True)\n",
+    "df_SAA['cumsum_w'] = np.cumsum(w)\n",
+    "\n",
+    "df_TAA = pd.DataFrame(ptf_return_TAA,columns=['return'])\n",
+    "df_TAA[\"w\"] = w\n",
+    "df_TAA = df_TAA.sort_values(by='return',ascending=True)\n",
+    "df_TAA['cumsum_w'] = np.cumsum(w)\n",
+    "\n",
+    "df_Real = pd.DataFrame(ptf_return_Real,columns=['return'])\n",
+    "df_Real[\"w\"] = w\n",
+    "df_Real = df_Real.sort_values(by='return',ascending=True)\n",
+    "df_Real['cumsum_w'] = np.cumsum(w)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "VaR weigthed SAA: -0.0163524306514324\nVaR weigthed TAA: -0.02889741887969\nVaR weigthed Real: -0.025080524588452\n"
+     ]
+    }
+   ],
+   "source": [
+    "SAA_weight_VaR = df_SAA['return'][df_SAA['cumsum_w'] <= 0.05].iloc[-1]\n",
+    "TAA_weight_VaR = df_TAA['return'][df_TAA['cumsum_w'] <= 0.05].iloc[-1]\n",
+    "Real_weight_VaR = df_Real['return'][df_Real['cumsum_w'] <= 0.05].iloc[-1]\n",
+    "\n",
+    "\n",
+    "SAA_weight_ES = df_SAA['return'][df_SAA['return'] <= SAA_weight_VaR].mean()\n",
+    "\n",
+    "print(f'VaR weigthed SAA: {SAA_weight_VaR}')\n",
+    "print(f'VaR weigthed TAA: {TAA_weight_VaR}')\n",
+    "print(f'VaR weigthed Real: {Real_weight_VaR}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "ES weigthed SAA: -0.025712645074393227\nES weigthed TAA: -0.046182528021526496\nES weigthed Real: -0.043374809135124065\n"
+     ]
+    }
+   ],
+   "source": [
+    "SAA_weight_ES = df_SAA['return'][df_SAA['return'] <= SAA_weight_VaR].mean()\n",
+    "TAA_weight_ES = df_TAA['return'][df_TAA['return'] <= TAA_weight_VaR].mean()\n",
+    "Real_weight_ES = df_Real['return'][df_Real['return'] <= Real_weight_VaR].mean()\n",
+    "\n",
+    "print(f'ES weigthed SAA: {SAA_weight_ES}')\n",
+    "print(f'ES weigthed TAA: {TAA_weight_ES}')\n",
+    "print(f'ES weigthed Real: {Real_weight_ES}')"
    ]
   },
   {
